log/build_2024-11-30_13-11-37/turtlebot_controller/stderr.log
  File "/home/ste/my_ros2_ws/install/turtlebot_controller/lib/python3.10/site-packages/script_python/move_turtle_AB.py", line 10
    from script_python/turtle_estimate_position import publish_initial_pose
                      ^
SyntaxError: invalid syntax

